fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -334,6 +334,10 @@ background: linear-gradient(to left, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Fi
     .day{
         font-size: 1rem;
     }
+    .card-html,.card-css,.card-bootstrap,.card-github,.card-javascript{
+        height: 420px;
+        object-fit: contain;
+    }
     .card{
         box-shadow: 0px 2px 10px rgba(7, 25, 47, 0.15);
     }
